--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,10 @@
 {
+  "trailingComma": "all",
+  "tabWidth": 2,
   "semi": false,
-  "arrowParens": "always",
   "singleQuote": true,
+  "printWidth": 120,
+  "arrowParens": "always",
+  "bracketSpacing": true,
   "endOfLine": "auto"
 }
- 
