--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
+    "sgiep-front": "file:",
     "styled-components": "^6.1.12",
     "vite-tsconfig-paths": "^5.0.1"
   },
