--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-date-pickers": "^7.12.1",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "axios": "^1.7.4",
+    "axios-retry": "^4.5.0",
     "dayjs": "^1.11.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
